Fixed Menu Text size on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Dosis:200);
 
-@import url("http://fonts.googleapis.com/css?family=Josefin+Slab:400,700");
 @import url("http://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400");
 body{
   color:#fff;background:#fff;font-size:18px;font-family:"Josefin Slab","Helvetica Neue",Helvetica,sans-serif;font-weight:400;
@@ -212,4 +211,9 @@ div.cell
 #slidemenu {
   margin: 0;
   max-height: 15%;
+}
+
+#games {
+  background-image: url("../images/Arise.png"),
+  background:;
 }
